[tool.poetry]
name = "spikebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"
numpy = "^2.2.0"
Flask = "^3.1.0"
urllib3 = "^2.2.3"
py-cord = "^2.6.1"
google-api-python-client = "^2.154.0"
xmltodict = "^0.14.2"
python-dotenv = "^1.0.1"
aiomysql = "^0.2.0"
poetry-plugin-export = "^1.8.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"